--- a/src/dr.html
+++ b/src/dr.html
@@ -23,7 +23,8 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
     <a href="#" class="navbar-brand" style="font-size: 25px;">Doctor Plant</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" style="border: none">menu</button>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"
+      style="border: none; outline: none; font-weight: lighter;">меню</button>
     <!-- <span class="fas fa-angle-down" style="color: green">menu</span> -->
 
     <div class="collapse navbar-collapse" id="navbarMenu">
@@ -79,79 +80,82 @@
 
   <div id="section2" class="containerInfo">
     <h2 class="infoTitle">Чем болеют растения</h2>
-    <ul><br>
-      <p>Абсолютно здоровых растений не существует. Мало того, в большинстве случаев инфекция носит комплексный
-        характер, т.е. на одном растении можно отметить несколько самых разнообразных болезней.</p>
-      <p>Болезни делятся на: инфекционные (вирусные, бактериальные, грибковые, паразиты); проблемы недостатка или
-        излишков питания; проблемы внешних условий по свету, ветру или влаге.</p>
-      <p>Вот нескольк примеров заболеваний: </p>
-      <li>Гниль – появляется из-за избытка полива или азотистых удобрений</li><br>
+
+    <p>Абсолютно здоровых растений не существует. Мало того, в большинстве случаев инфекция
+      носит комплексный
+      характер, т.е. на одном растении можно отметить несколько самых разнообразных болезней.</p>
+
+    <p>Болезни делятся на: инфекционные (вирусные, бактериальные, грибковые, паразиты); проблемы недостатка или
+      излишков питания; проблемы внешних условий по свету, ветру или влаге.</p>
+
+    <p>Вот нескольк примеров заболеваний: </p>
+    <ul>
+
+      <li>Гниль – появляется из-за избытка полива или азотистых удобрений</li>
       <li>Мучнистая роса на комнатных растениях (белый налет) – причиной может быть неподходящая температура или
-        влажность, а также грибок</li><br>
-      <li>Липкий налет на листьях – чаще всего появляется из-за тли и других паразитов</li><br>
+        влажность, а также грибок</li>
+      <li>Липкий налет на листьях – чаще всего появляется из-за тли и других паразитов</li>
       <li>Паутина, опутывающая цветок – всему виной паутинные клещи, которые поражают растение и питаются его соками
-      </li><br>
-      <li>Мозаичные пятна и резкое увядание – признак вирусов</li><br>
+      </li>
+      <li>Мозаичные пятна и резкое увядание – признак вирусов</li>
       <li>Вредители комнатных растений – их обычно видно невооруженным глазом. Это могут быть долгоносики, мокрицы, тля,
-        мухи, минеры, многоножки и многие другие</li><br>
-    </ul>
+        мухи, минеры, многоножки и многие другие</li>
   </div>
 
   <div id="section3" class="container" style="padding-top:70px;padding-bottom:70px">
     <h1 class="display-4 pb-4 text-center">УСЛУГИ</h1>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Консультация</small></h3>
+        <h3 class="services">Консультация</h3>
         <p>Мы всегда готовы прийти на помощь к вам и вашим зеленым друзьям. Осуществим максимально точную консультацию и
           предложим пути решения</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Выезд специалиста</small></h3>
+        <h3 class="services">Выезд специалиста</h3>
         <p>Многие случаи не могут обойтись без личного осмотра растения специалистом в таких случаях мы приезжаем и
           проводим консультацию на месте</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Осмотр растений (комнатные и уличные)</small></h3>
+        <h3 class="services">Осмотр растений (комнатные и уличные)</h3>
         <p>Многие случаи не могут обойтись без личного осмотра растения специалистом в таких случаях мы приезжаем и
           проводим консультацию на месте!</p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Корректировка в уходе за растениями</small></h3>
+        <h3 class="services">Корректировка в уходе за растениями</h3>
         <p>Часто не правильный или не актуальный уход за растением может привести к заболеванию или даже гибели
           растения. Важно вовремя корректировать уход</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Диагностика заболеваний</small></h3>
+        <h3 class="services">Диагностика заболеваний</h3>
         <p>Помимо неправильного ухода растение также может быть подвержено заболеванию, которое нужно как можно скорее
           диагностировать</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Назначение лечения</small></h3>
+        <h3 class="services">Назначение лечения</h3>
         <p>После выявления болезни стоит незамедлительно сделать корректировку в уходе и назначить курс лечения</p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Обработка от вредителей и заболеваний (профилактика)</small></h3>
+        <h3 class="services">Обработка от вредителей и заболеваний (профилактика)</h3>
         <p>Самым правильным решением от болезней и вредителей является профилактика. При своевременной обратботке вы
           гарантируете защищенность растения</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Стрижка, обрезка, формировка
-          </small></h3>
+        <h3 class="services">Стрижка, обрезка, формировка</h3>
         <p>Мы поможем вашему саду получить вид как с картинки. предоставляем весь спектр услуг по стрижке растений</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Подкормка растений</small></h3>
+        <h3 class="services">Подкормка растений</h3>
         <p>Чтобы растение росло именно таким образом как вы хотите и могло похвастаться пышно шевелюрой, нужно помогать
           его росту дополнительными подкормками</p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Пересадка любой сложности</small></h3>
+        <h3 class="services">Пересадка любой сложности</h3>
         <p>С ходом роста растения ему все меньше подходит его вазон. Важно вовремя обращать внимание на то, что ему
           тесно в старом вазоне. Мы же поможем ему с переездом в новый вазон</p>
       </div>
@@ -161,14 +165,14 @@
         </p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Ландшафтный дизайн</small></h3>
+        <h3 class="services">Ландшафтный дизайн</h3>
         <p>Поможем вам с организацией правильного и эстетичного ландшафтного дизайна, поможем подобрать растения и декор
         </p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Онлайн-консультации</small></h3>
+        <h3 class="services">Онлайн-консультации</h3>
         <p>Не все случаи требуют выезда специалиста. Иногда достаточно консультации по телефону или мессенджеру. </p>
       </div>
     </div>
