--- a/src/drU.html
+++ b/src/drU.html
@@ -23,7 +23,8 @@
 <body data-spy="scroll" data-target=".navbar" data-offset="50">
   <nav class="navbar navbar-expand-sm bg-light navbar-light fixed-top">
     <a href="#" class="navbar-brand" style="font-size: 25px;">Doctor Plant</a>
-    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu" style="border: none">menu</button>
+    <button class="navbar-toggler" data-toggle="collapse" data-target="#navbarMenu"
+      style="border: none; outline: none; font-weight: lighter;">меню</button>
     <!-- <span class="fas fa-angle-down" style="color: green"></span> -->
 
     <div class="collapse navbar-collapse" id="navbarMenu">
@@ -79,12 +80,13 @@
 
   <div id="section2" class="containerInfo">
     <h2 class="infoTitle">На що хворіють рослини</h2>
+    <p>Абсолютно здорових рослин не існує. Мало того, в більшості випадків інфекція носить комплексний
+      характер, тобто на одній рослині можна відзначити кілька найрізноманітніших хвороб.</p>
+    <p>Хвороби діляться на: інфекційні (вірусні, бактеріальні, грибкові, паразити); проблеми нестачі або
+      надлишків харчування; проблеми зовнішніх умов по світу, вітрі або вологи.</p>
+    <p>Ось кіль прикладів захворювань:</p>
     <ul><br>
-      <p>Абсолютно здорових рослин не існує. Мало того, в більшості випадків інфекція носить комплексний
-        характер, тобто на одній рослині можна відзначити кілька найрізноманітніших хвороб.</p>
-      <p>Хвороби діляться на: інфекційні (вірусні, бактеріальні, грибкові, паразити); проблеми нестачі або
-        надлишків харчування; проблеми зовнішніх умов по світу, вітрі або вологи.</p>
-      <p>Ось кіль прикладів захворювань:</p>
+
       <li>Гниль - з'являється через надлишок поливу або азотистих добрив</li><br>
       <li>Борошниста роса на кімнатних рослинах (білий наліт) - причиною може бути невідповідна температура або
         вологість, а також грибок</li><br>
@@ -101,68 +103,67 @@
     <h1 class="display-4 pb-4 text-center">ПОСЛУГИ</h1>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Консультація</small></h3>
+        <h3 class="services">Консультація</h3>
         <p>Ми завжди готові прийти на допомогу до вас і вашим зеленим друзям. Здійснимо максимально точну консультацію і
           запропонуємо шляхи вирішення</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Виїзд фахівця</small></h3>
+        <h3 class="services">Виїзд фахівця</h3>
         <p>Багато випадків не можуть обійтися без особистого огляду рослини фахівцем в таких випадках ми приїжджаємо і
           проводимо консультацію на місці</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Огляд рослин (кімнатні і вуличні)</small></h3>
+        <h3 class="services">Огляд рослин (кімнатні і вуличні)</h3>
         <p>Багато випадків не можуть обійтися без особистого огляду рослини фахівцем в таких випадках ми приїжджаємо і
           проводимо консультацію на місці!</p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Коригування в догляді за рослинами</small></h3>
+        <h3 class="services">Коригування в догляді за рослинами</h3>
         <p>Часто неправильний або не актуальний догляд за рослиною може привести до захворювання або навіть загибелі
           рослини. Важливо вчасно коригувати догляд</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Діагностика захворювань</small></h3>
+        <h3 class="services">Діагностика захворювань</h3>
         <p>Крім неправильного догляду рослина також може бути піддана захворюванню, яке потрібно якомога швидше
           діагностувати</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Призначення лікування</small></h3>
+        <h3 class="services">Призначення лікування</h3>
         <p>Після виявлення хвороби варто негайно зробити коригування в догляді і призначити курс лікування</p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Обробка від шкідників і захворювань (профілактика)</small></h3>
+        <h3 class="services">Обробка від шкідників і захворювань (профілактика)</h3>
         <p>Найбільш правильним рішенням від хвороб і шкідників є профілактика. При своєчасній обробці ви
           гарантуєте захищеність рослини</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Стрижка, обрізка, формировка
-          </small></h3>
+        <h3 class="services">Стрижка, обрізка, формировка</h3>
         <p>Ми допоможемо вашому саду отримати вид як з картинки. надаємо весь спектр послуг зі стрижки рослин</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Підживлення рослин</small></h3>
+        <h3 class="services">Підживлення рослин</h3>
         <p>Щоб рослина росла саме таким чином як ви хочете і могла похвалитися пишною шевелюрою, потрібно допомагати
           її росту додатковими підгодівлею</p>
       </div>
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Пересадка будь-якої складності</small></h3>
+        <h3 class="services">Пересадка будь-якої складності</h3>
         <p>З ходом росту рослини йому все менше підходить його вазон. Важливо вчасно звертати увагу на те, що йому
           тісно в старому вазоні. Ми ж допоможемо йому з переїздом в новий вазон</p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Стрижка газону</small></h3>
+        <h3 class="services">Стрижка газону</h3>
         <p>Стрижка газону для багатьох людей виснажливий процес але не для нас. Ми з радістю допоможемо вам з цим
           завданням
         </p>
       </div>
       <div class="col-sm">
-        <h3><small class="services">Ландшафтний дизайн</small></h3>
+        <h3 class="services">Ландшафтний дизайн</h3>
         <p>Допоможемо вам з організацією правильного і естетичного ландшафтного дизайну, допоможемо підібрати рослини і
           декор
         </p>
@@ -170,7 +171,7 @@
     </div>
     <div class="row pb-4">
       <div class="col-sm">
-        <h3><small class="services">Онлайн-консультації</small></h3>
+        <h3 class="services">Онлайн-консультації</h3>
         <p>Не всі випадки вимагають виїзду фахівця. Іноді досить консультації по телефону або месенджер</p>
       </div>
     </div>
