--- a/src/dr.html
+++ b/src/dr.html
@@ -91,20 +91,23 @@
     <p>Вот нескольк примеров заболеваний: </p>
     <ul>
 
-      <li>Гниль – появляется из-за избытка полива или азотистых удобрений</li>
-      <li>Мучнистая роса на комнатных растениях (белый налет) – причиной может быть неподходящая температура или
+      <li><strong>Гниль</strong> – появляется из-за избытка полива или азотистых удобрений</li>
+      <li><strong>Мучнистая роса на комнатных растениях (белый налет)</strong> – причиной может быть неподходящая
+        температура или
         влажность, а также грибок</li>
-      <li>Липкий налет на листьях – чаще всего появляется из-за тли и других паразитов</li>
-      <li>Паутина, опутывающая цветок – всему виной паутинные клещи, которые поражают растение и питаются его соками
+      <li><strong>Липкий налет на листьях</strong> – чаще всего появляется из-за тли и других паразитов</li>
+      <li><strong>Паутина, опутывающая цветок</strong> – всему виной паутинные клещи, которые поражают растение и
+        питаются его соками
       </li>
-      <li>Мозаичные пятна и резкое увядание – признак вирусов</li>
-      <li>Вредители комнатных растений – их обычно видно невооруженным глазом. Это могут быть долгоносики, мокрицы, тля,
+      <li><strong>Мозаичные пятна и резкое увядание</strong> – признак вирусов</li>
+      <li><strong>Вредители комнатных растений</strong> – их обычно видно невооруженным глазом. Это могут быть
+        долгоносики, мокрицы, тля,
         мухи, минеры, многоножки и многие другие</li>
   </div>
 
   <div id="section3" class="container" style="padding-top:70px;padding-bottom:70px">
     <h1 class="display-4 pb-4 text-center">УСЛУГИ</h1>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Консультация</h3>
         <p>Мы всегда готовы прийти на помощь к вам и вашим зеленым друзьям. Осуществим максимально точную консультацию и
@@ -121,7 +124,7 @@
           проводим консультацию на месте!</p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Корректировка в уходе за растениями</h3>
         <p>Часто не правильный или не актуальный уход за растением может привести к заболеванию или даже гибели
@@ -137,7 +140,7 @@
         <p>После выявления болезни стоит незамедлительно сделать корректировку в уходе и назначить курс лечения</p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Обработка от вредителей и заболеваний (профилактика)</h3>
         <p>Самым правильным решением от болезней и вредителей является профилактика. При своевременной обратботке вы
@@ -153,7 +156,7 @@
           его росту дополнительными подкормками</p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Пересадка любой сложности</h3>
         <p>С ходом роста растения ему все меньше подходит его вазон. Важно вовремя обращать внимание на то, что ему
@@ -170,7 +173,7 @@
         </p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Онлайн-консультации</h3>
         <p>Не все случаи требуют выезда специалиста. Иногда достаточно консультации по телефону или мессенджеру. </p>
@@ -250,13 +253,13 @@
               60</a></div>
         </div>
         <div class="contactsText">Напиши нам: <div class="contactsValue"><a
-              href="mailto:yurevich540@gmail.com">yurevich540@gmail.com</a></div>
+              href="mailto:doctorplantua@gmail.com">doctorplantua@gmail.com</a></div>
         </div>
         <div class="containerMesenger">
-          <a href="mailto:yurevich540@gmail.com">
+          <a href="mailto:doctorplantua@gmail.com">
             <div class="emailIcon"></div>
           </a>
-          <a href="tg://resolve?domain=Veronica_Vl">
+          <a href="tg://resolve?domain=Doctor_plant">
             <div class="telegramIcon"></div>
           </a>
           <a href="whatsapp://send?phone=+380667352960">
