--- a/src/drU.html
+++ b/src/drU.html
@@ -85,23 +85,26 @@
     <p>Хвороби діляться на: інфекційні (вірусні, бактеріальні, грибкові, паразити); проблеми нестачі або
       надлишків харчування; проблеми зовнішніх умов по світу, вітрі або вологи.</p>
     <p>Ось кіль прикладів захворювань:</p>
-    <ul><br>
+    <ul>
 
-      <li>Гниль - з'являється через надлишок поливу або азотистих добрив</li><br>
-      <li>Борошниста роса на кімнатних рослинах (білий наліт) - причиною може бути невідповідна температура або
-        вологість, а також грибок</li><br>
-      <li>Липкий наліт на листках - найчастіше з'являється через попелиці та інших паразитів</li><br>
-      <li>Павутина, обплутує квітка - всьому виною павутинні кліщі, які вражають рослина і харчуються його соками
-      </li><br>
-      <li>Мозаїчні плями і різке в'янення - ознака вірусів</li><br>
-      <li>Шкідники кімнатних рослин - їх зазвичай видно неозброєним оком. Це можуть бути довгоносики, мокриці, попелиця,
-        мухи, мінери, багатоніжки і багато інших</li><br>
+      <li> <strong>Гниль</strong> - з'являється через надлишок поливу або азотистих добрив</li>
+      <li><strong>Борошниста роса на кімнатних рослинах (білий наліт)</strong> - причиною може бути невідповідна
+        температура або
+        вологість, а також грибок</li>
+      <li><strong>Липкий наліт на листках</strong> - найчастіше з'являється через попелиці та інших паразитів</li>
+      <li><strong>Павутина, обплутує квітка</strong> - всьому виною павутинні кліщі, які вражають рослина і харчуються
+        його соками
+      </li>
+      <li><strong>Мозаїчні плями і різке в'янення</strong> - ознака вірусів</li>
+      <li><strong>Шкідники кімнатних рослин</strong> - їх зазвичай видно неозброєним оком. Це можуть бути довгоносики,
+        мокриці, попелиця,
+        мухи, мінери, багатоніжки і багато інших</li>
     </ul>
   </div>
 
   <div id="section3" class="container" style="padding-top:70px;padding-bottom:70px">
     <h1 class="display-4 pb-4 text-center">ПОСЛУГИ</h1>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Консультація</h3>
         <p>Ми завжди готові прийти на допомогу до вас і вашим зеленим друзям. Здійснимо максимально точну консультацію і
@@ -118,7 +121,7 @@
           проводимо консультацію на місці!</p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Коригування в догляді за рослинами</h3>
         <p>Часто неправильний або не актуальний догляд за рослиною може привести до захворювання або навіть загибелі
@@ -134,7 +137,7 @@
         <p>Після виявлення хвороби варто негайно зробити коригування в догляді і призначити курс лікування</p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Обробка від шкідників і захворювань (профілактика)</h3>
         <p>Найбільш правильним рішенням від хвороб і шкідників є профілактика. При своєчасній обробці ви
@@ -150,7 +153,7 @@
           її росту додатковими підгодівлею</p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Пересадка будь-якої складності</h3>
         <p>З ходом росту рослини йому все менше підходить його вазон. Важливо вчасно звертати увагу на те, що йому
@@ -169,7 +172,7 @@
         </p>
       </div>
     </div>
-    <div class="row pb-4">
+    <div class="row">
       <div class="col-sm">
         <h3 class="services">Онлайн-консультації</h3>
         <p>Не всі випадки вимагають виїзду фахівця. Іноді досить консультації по телефону або месенджер</p>
@@ -247,13 +250,13 @@
               60</a></div>
         </div>
         <div class="contactsText">Напиши нам: <div class="contactsValue"><a
-              href="mailto:yurevich540@gmail.com">yurevich540@gmail.com</a></div>
+              href="mailto:doctorplantua@gmail.com">doctorplantua@gmail.com</a></div>
         </div>
         <div class="containerMesenger">
-          <a href="mailto:yurevich540@gmail.com">
+          <a href="mailto:doctorplantua@gmail.com">
             <div class="emailIcon"></div>
           </a>
-          <a href="tg://resolve?domain=Veronica_Vl">
+          <a href="tg://resolve?domain=Doctor_plant">
             <div class="telegramIcon"></div>
           </a>
           <a href="whatsapp://send?phone=+380667352960">
